# rustyauto

./: Cargo.toml
aasdk_rs/: Cargo.toml  build.rs
aasdk_rs/src/: androidautoentity.rs  constants.rs  cryptor.rs  legacy_androidautoentity.rs  lib.rs  usbdriver.rs
aasdk_rs/src/channels/: av_input_service_channel.rs  control_service_channel.rs  general_audio.rs  input_service_channel.rs  media_audio_service_channel.rs  mod.rs  sensor_service_channel.rs  speech_audio_service_channel.rs  system_audio_service_channel.rs  video_service_channel.rs
aasdk_rs/src/channels/av_input/: av_input_channel_message_handler.rs  av_input_service_channel.rs  mod.rs
aasdk_rs/src/channels/control/: control_channel_message_handler.rs  control_service_channel.rs  message_ids.rs  mod.rs
aasdk_rs/src/channels/input/: input_channel_message_handler.rs  input_service_channel.rs  mod.rs
aasdk_rs/src/channels/media_audio/: media_audio_channel_message_handler.rs  media_audio_service_channel.rs  mod.rs
aasdk_rs/src/channels/sensor/: mod.rs  (+2 more)
aasdk_rs/src/data/: android_auto_entity.rs  audio_services.rs  messenger.rs  mod.rs  temp_message_storage.rs
aasdk_rs/src/messenger/: frame.rs  legacy_messenger.rs  message.rs  message_handler.rs  messenger.rs  mod.rs  payload.rs  timestamp.rs
aasdk_rs/src/protos/: ServiceDiscoveryResponseMessage.proto
aasdk_rs/src/services/: audio_input_service.rs  bluetooth_service.rs  input_service.rs  media_audio_service.rs  mod.rs  sensor_service.rs  service.rs  speech_audio_service.rs  system_audio_service.rs  video_service.rs  wifi_service.rs
src/: main.rs
(+24 files in other folders)
