[package]
name = "aasdk_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9"
log = "0.4"
thiserror = "1.0"
byteorder = "1.4"
openssl = "0.10"
openssl-sys = "0.9"
protobuf = "3.2"
bytes = "1.2"
#prost = "0.11"

[build-dependencies]
#prost-build = { version = "0.11" }
protobuf-codegen = "3.2"
